--- a/INSTALL
+++ b/INSTALL
@@ -32,3 +32,12 @@ AND
 
 Python-memcached API:
     ftp://ftp.tummy.com/pub/python-memcached/python-memcached-1.43.tar.gz
+
+
+To build the documentation you need the following:
+
+  * Sphinx (http://sphinx.pocoo.org/)
+
+For PDF output, you will need:
+
+  * sudo apt-get install texlive-latex-extra
