--- a/INSTALL
+++ b/INSTALL
@@ -1,38 +1,53 @@
+========
 Software
 ========
-Below is a list of software that is required for SMPE.  The optional
-software is optional (duh) but highly recommended for increased
-performance.
+Below is a list of software that is required for Populous.  The optional
+software recommended for increased performance.
+
+This is most likely an incomplete guide.  If you are using Debian you'll
+find a list of packages that you need to have installed.
 
 Required
---------
+========
 
   * libxml2 (http://xmlsoft.org/downloads.html)
   * libxslt (http://xmlsoft.org/downloads.html)
   * lxml >= 2.0.7 (http://codespeak.net/lxml/index.html)
   * ElementTree >= 1.3 (http://svn.effbot.org/public/elementtree-1.3/)
 
-
 Optional
---------
+========
 
   * cjson >= 1.0.5
   * cElementTree >= 1.0.6 (http://svn.effbot.org/public/celementtree/)
 
 Debian Install
---------------
+==============
 
-General:
-apt-get install build-essential libssl-dev xinetd openssl sysvconfig rsync nfs-common ssh openssh-server python-flup python-imaging python-markdown python-xapian python-cjson python-psycopg2 python-docutils python-setuptools imagemagick wv libwv-dev memcached -y
+Here is a (mostly) complete list of Debian packages that are needed to run
+Populous.
 
-Populous:
-apt-get install build-essential apache2-mpm-prefork python-imaging python-markdown python-xapian python-cjson python-psycopg2 python-docutils imagemagick wv libwv-dev memcached -y
+General::
+
+    apt-get install build-essential libssl-dev xinetd openssl sysvconfig \
+    rsync nfs-common ssh openssh-server python-flup python-imaging \
+    python-markdown python-xapian python-cjson python-psycopg2 \
+    python-docutils python-setuptools imagemagick wv libwv-dev memcached -y
+
+Populous::
+
+    apt-get install build-essential apache2-mpm-prefork python-imaging \
+    python-markdown python-xapian python-cjson python-psycopg2 \
+    python-docutils imagemagick wv libwv-dev memcached -y
 
 AND
 
 Python-memcached API:
     ftp://ftp.tummy.com/pub/python-memcached/python-memcached-1.43.tar.gz
 
+
+Documentation
+=============
 
 To build the documentation you need the following:
 
