Another tweak to INSTALL.
git-svn-id: http://code.populousproject.com/svn/trunk@65 2d015e74-dcdc-4604-a43e-ef45d21546f3

--- a/INSTALL
+++ b/INSTALL
@@ -5,7 +5,7 @@ Below is a list of software that is required for Populous.  The optional
 software recommended for increased performance.
 
 This is most likely an incomplete guide.  If you are using Debian you'll
-find a list of packages that you need to have installed.
+see a list of packages that you need to have installed below.
 
 Required
 ========
